--- a/autoscaler/autoscale/src/main/resources/static/index.html
+++ b/autoscaler/autoscale/src/main/resources/static/index.html
@@ -1,10 +1,67 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>Nimbus Run</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>NimbusRun • Home</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" crossorigin="anonymous">
+  <style>
+    :root{
+      --nr-primary:#0d6efd; /* blue */
+      --nr-primary-2:#0b5ed7; /* darker blue */
+      --nr-black:#0b0f14;    /* near-black */
+      --nr-white:#ffffff;    /* white */
+    }
+    .navbar{ background: var(--nr-black); }
+    .hero{
+      background: linear-gradient(135deg, var(--nr-primary) 0%, var(--nr-primary-2) 100%);
+      color: var(--nr-white);
+    }
+    .hero .lead{ opacity:.95 }
+    .card-hover:hover{ box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important; }
+    .nr-link{ text-decoration:none }
+    .nr-pill{ border-radius: 9999px; }
+    .footer{ background: var(--nr-black); color:#b7c0cc; }
+  </style>
 </head>
-<body>
-<h1>Welcome to Nimbus RUN</h1>
-<p></p>
+<body class="bg-white">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background:#0b0f14;">
+  <div class="container">
+    <a class="navbar-brand fw-semibold" href="#">NimbusRun</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="nav">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a href="actionpool.html" class="nav-link">Action Pools</a></li>
+        <li class="nav-item"><a href="posted-webhooks.html" class="nav-link">Posted Webhooks</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<main class="d-flex align-items-center" style="min-height: calc(100vh - 56px - 60px);">
+  <div class="container text-center py-5">
+    <h1 class="display-5 fw-semibold mb-3" style="letter-spacing:.2px;">NimbusRun</h1>
+    <p class="lead text-muted mb-4">Autoscale GitHub Actions runners on your cloud.</p>
+    <div class="d-flex justify-content-center gap-3">
+      <a href="/actionpool.html" class="btn btn-primary btn-lg px-4">Action Pools</a>
+      <a href="/posted-webhooks.html" class="btn btn-outline-dark btn-lg px-4">Posted Webhooks</a>
+    </div>
+  </div>
+</main>
+
+<footer class="py-4 text-center text-muted small" style="border-top:1px solid #efefef;">
+  <span class="me-2 badge bg-primary">Blue</span>
+  <span class="me-2 badge bg-dark">Black</span>
+  <span class="badge bg-light text-dark">White</span>
+  <div class="mt-2">&copy; <span id="year"></span> NimbusRun</div>
+</footer>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
