--- a/autoscaler/autoscale/src/main/resources/static/posted-webhooks.html
+++ b/autoscaler/autoscale/src/main/resources/static/posted-webhooks.html
@@ -129,7 +129,7 @@
 </div>
 
 <script>
-  const ENDPOINT = "http://localhost:8080/api/v1/admin/posted-webhooks";
+  const ENDPOINT = "/api/v1/admin/posted-webhooks";
 
   // Highlight active nav link based on filename
   (function highlightActive() {
